# salainDNA

./: .gitignore  CMakeLists.txt  README.md  bitmatrix.cpp  bitmatrix.h  command.cpp  command.h  common.cpp  common.h  directaddressing.cpp  directaddressing.h  edlib.h  indexing.cpp  indexing.h  main.cpp  minimizer.cpp  minimizer.h  minimizers.cpp  minimizers.h  openaddressing.cpp  openaddressing.h  output.cpp  output.h  pigeonhole.cpp  pigeonhole.h  searchall.cpp  searchall.h  searchexit.cpp  searchexit.h  searching.cpp  searching.h  seedselector.cpp  seedselector.h  verification.cpp  verification.h
Pigeonhole/: .gitignore  CMakeLists.txt  addressing.cpp  addressing.h  common.cpp  common.h  edlib.cpp  edlib.h  file_manager.cpp  file_manager.h  indexing.cpp  indexing.h  main.cpp  minimizers.cpp  minimizers.h  phreads.cpp  phreads.h  phseeds.cpp  phseeds.h  pigeonhole.cpp  pigeonhole.h
